# huggingsafe

./: .gitignore  cli.py  pyproject.toml
hugging/: scrapy.cfg
hugging/hugging/: items.py  middlewares.py  pipelines.py  settings.py
hugging/hugging/spiders/: models_spider.py
